# Sigil-protocol

./: Cargo.toml  README.md  WHITEPAPER.md
src/: main.rs
src/commands/: commit.rs  derive.rs  embed.rs  extract.rs  history.rs  mod.rs  prune.rs  recover.rs  verify.rs
