[package]
name = "sigil"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
base64 = "0.21"
rand = "0.8"
rand_chacha = "0.3"
curve25519-dalek = "4.0.0"
ed25519-dalek = "1.0.1"
sha2 = "0.10"
zstd = "0.11"
crc32fast = "1.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"