[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
rand = "0.8"
sha2 = "0.10"
chrono = "0.4"
reed-solomon = "0.2"
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.4"
rayon = "1.5"
parquet = "0.21"
arrow = "0.21"
merkle-tree = "0.4"
clap = "4.0"  # For CLI parsing
bincode = "1.3"  # For .sg1 serialization
